--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "axios": "^0.20.0",
@@ -14,9 +16,9 @@
     "next-images": "^1.6.0",
     "next-redux-wrapper": "^6.0.2",
     "prop-types": "^15.7.2",
-    "react": "17.0.1",
+    "react": "^16.13.1",
     "react-datepicker": "^3.1.3",
-    "react-dom": "17.0.1",
+    "react-dom": "16.9.0",
     "react-redux": "^7.2.1",
     "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
@@ -25,14 +27,23 @@
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "^1.11.1",
+    "@babel/core": "^7.12.3",
+    "@storybook/addon-actions": "^6.0.27",
+    "@storybook/addon-essentials": "^6.0.27",
+    "@storybook/addon-knobs": "^6.0.27",
+    "@storybook/addon-links": "^6.0.27",
+    "@storybook/react": "^6.0.27",
     "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-styled-components": "^1.11.1",
     "cross-env": "^7.0.2",
     "eslint": "^7.5.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.5",
-    "eslint-plugin-react-hooks": "^4.0.8"
+    "eslint-plugin-react-hooks": "^4.0.8",
+    "react-is": "^16.13.1",
+    "typescript": "^4.0.5"
   }
 }
